Java 8 support fixed